src/objects/SOS_Time_Off_Balance__c.object
<CustomObject>
    <fields>
        <fullName>Bereavement_Time_Alloted__c</fullName>
        <label>Bereavement Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bereavement_Time_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bereavement Time Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bereavement_Time_Pending__c</fullName>
        <label>Bereavement Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bereavement_Time_Rem__c</fullName>
        <label>Bereavement Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bereavement_Time_Remaining__c</fullName>
        <formula>Bereavement_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bereavement Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bereavement_bal__c</fullName>
        <formula>IF(Show_In_Days__c, Employee_Name__r.Bereavement__c/8, Employee_Name__r.Bereavement__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bereavement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_Time_Alloted__c</fullName>
        <label>Birthday Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_Time_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Birthday Time Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_Time_Pending__c</fullName>
        <label>Birthday Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_Time_Rem__c</fullName>
        <label>Birthday Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_Time_Remaining__c</fullName>
        <formula>Birthday_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthday_bal__c</fullName>
        <formula>IF(Show_In_Days__c, Employee_Name__r.Birthday__c/8, Employee_Name__r.Birthday__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Off_Balance_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Float_TimeAlloted__c</fullName>
        <label>Float Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Float_Time_Approved__c</fullName>
        <label>Float Time Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Float_Time_Pending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Float Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Float_Time_Rem__c</fullName>
        <label>Float Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Float_Time_Remaining__c</fullName>
        <formula>Float_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Float Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Float_bal__c</fullName>
        <formula>IF(Show_In_Days__c, Employee_Name__r.Float__c/8, Employee_Name__r.Float__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Float</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holiday_work_days_Alloted__c</fullName>
        <label>Holiday work days Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holiday_work_days_Time_Approved__c</fullName>
        <label>Holiday work days Time Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holiday_work_days_Time_Pending__c</fullName>
        <label>Holiday work days Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holiday_work_days_Time_Rem__c</fullName>
        <label>Holiday work days Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holiday_work_days_Time_Remaining__c</fullName>
        <formula>Holiday_work_days_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holiday work days Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Holiday_work_days_bal__c</fullName>
        <formula>IF(Show_In_Days__c, Employee_Name__r.Holiday_work_days__c/8, Employee_Name__r.Holiday_work_days__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holiday work days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jury_Duty_Time_Alloted__c</fullName>
        <label>Jury Duty Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jury_Duty_Time_Approved__c</fullName>
        <label>Jury Duty Time Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jury_Duty_Time_Pending__c</fullName>
        <label>Jury Duty Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jury_Duty_Time_Rem__c</fullName>
        <label>Jury Duty Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jury_Duty_Time_Remaining__c</fullName>
        <formula>Jury_Duty_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jury Duty Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jury_Duty_bal__c</fullName>
        <formula>IF(Show_In_Days__c, Employee_Name__r.Jury_Duty__c/8, Employee_Name__r.Jury_Duty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jury Duty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Employee_Name__r.SOS_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relieve_Time_Alloted__c</fullName>
        <label>Relief Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relieve_Time_Approved__c</fullName>
        <label>Relief Time Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relieve_Time_Pending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Relief Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relieve_Time_Rem__c</fullName>
        <label>Relieve Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relieve_Time_Remaining__c</fullName>
        <formula>Relieve_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relief Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relieve_bal__c</fullName>
        <formula>IF(Show_In_Days__c, Employee_Name__r.Relieve__c/8, Employee_Name__r.Relieve__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relief</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Religious_OPEIU_Only_Time_Alloted__c</fullName>
        <label>Religious (OPEIU Only) Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Religious_OPEIU_Only_Time_Approved__c</fullName>
        <label>Religious (OPEIU Only) Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Religious_OPEIU_Only_Time_Pending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Religious (OPEIU Only) Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Religious_OPEIU_Only_Time_Rem__c</fullName>
        <label>Religious OPEIU Only Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Religious_OPEIU_Only_Time_Remaining__c</fullName>
        <formula>Religious_OPEIU_Only_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Religious (OPEIU Only) Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Religious_OPEIU_Only_bal__c</fullName>
        <formula>IF(Show_In_Days__c, Employee_Name__r.Religious_OPEIU_Only__c/8, Employee_Name__r.Religious_OPEIU_Only__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Religious (OPEIU Only)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_In_Days__c</fullName>
        <formula>Employee_Name__r.Show_Balance_In_Days__c</formula>
        <label>Show In Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sick_Time_Alloted__c</fullName>
        <label>Sick Time Alloted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_Time_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sick Time Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_Time_Pending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sick Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_Time_Rem__c</fullName>
        <label>Sick Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_Time_Remaining__c</fullName>
        <formula>Sick_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sick Time Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_bal__c</fullName>
        <formula>IF(Show_In_Days__c,Employee_Name__r.Sick__c/8,Employee_Name__r.Sick__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sick bal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Time_Alloted__c</fullName>
        <label>Unpaid Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Time_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unpaid Time Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Time_Pending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unpaid Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Time_Rem__c</fullName>
        <label>Unpaid Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_Time_Remaining__c</fullName>
        <formula>Unpaid_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid Time Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unpaid_bal__c</fullName>
        <formula>IF(Show_In_Days__c, Employee_Name__r.Unpaid__c/8, Employee_Name__r.Unpaid__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpaid bal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacation_Time_Alloted__c</fullName>
        <label>Vacation Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacation_Time_Approved__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vacation Time Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacation_Time_Pending__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vacation Time Pending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacation_Time_Rem__c</fullName>
        <label>Vacation Time Rem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vacation_Time_Remaining__c</fullName>
        <formula>Vacation_Time_Rem__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vacation Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vacation_bal__c</fullName>
        <formula>IF(Show_In_Days__c, Employee_Name__r.Vacation__c/8, Employee_Name__r.Vacation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>vacation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Time Off Balance</label>
    <nameField>
        <displayFormat>TOB-{000}</displayFormat>
        <label>SOS Time Off Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Off Balance</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Year_validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(VALUE(Year__c)&lt;YEAR(ToDAY())-100,VALUE(Year__c) &gt;YEAR(TODAY())+100)</errorConditionFormula>
        <errorMessage>Please Enter a valid year.</errorMessage>
    </validationRules>
</CustomObject>